tests/error/type_match/base_case_pointer_const_propagation1.bz
function test()
{
	let i = 0;
	let cpi: *const int32 = &i;
	let _: *int32 = cpi;
}
